--- a/IcarusSaveLib/IcarusSaveLib.csproj
+++ b/IcarusSaveLib/IcarusSaveLib.csproj
@@ -1,10 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Platforms>x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Title>IcarusSaveLib</Title>
+    <Product>IcarusSaveLib</Product>
+	<ProductName>IcarusSaveLib</ProductName>
+    <Description>Serialization library for Icarus save game files</Description>
+    <Company>Crystal</Company>
+    <Authors>Crystal Ferrai</Authors>
+    <Copyright>Copyright © 2025 Crystal Ferrai</Copyright>
+	<Version>0.1.0.0</Version>
+	<ProductVersion>$(Version)</ProductVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+	<InformationalVersion>$(Version)</InformationalVersion>
+	<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
